SIMD optimization for HNSW